# tictactoe-haskell

./: LICENSE  README.md  tic-tac-toe-haskell.cabal
src/TicTacToe/: Solver.hs
test/TicTacToe/: SolverSpec.hs
