name:                tic-tac-toe-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tic-tac-toe-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Craig J. Bass
maintainer:          craig@madetech.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe.Solver
  build-depends:       base >= 4.7 && < 5
                     , ilist
                     , lens
  default-language:    Haskell2010

test-suite tic-tac-toe-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tic-tac-toe-haskell 
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tic-tac-toe-haskell
